<resources>
    <string name="app_name">Portfolio App</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="stream">Spotify Streamer</string>
    <string name="fscores">Football Scores App </string>
    <string name="library">Library App</string>
    <string name="build_big">Build It Bigger</string>
    <string name="xyz_read">XYZ Reader</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
