<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_world"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:id="@+id/textView"
        android:textSize="21sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button_send"
        android:layout_alignStart="@+id/button_send" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:onClick="sendMessage"
        android:text="@string/stream"
        android:background="#F08C35"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/scores"
        android:layout_alignStart="@+id/scores"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/fscores"
        android:id="@+id/scores"
        android:layout_marginTop="15dp"
        android:background="#F08C35"
        android:onClick="sendMessage"
        android:layout_below="@+id/button_send"
        android:layout_alignLeft="@+id/library"
        android:layout_alignStart="@+id/library" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/library"
        android:id="@+id/library"
        android:background="#F08C35"
        android:layout_marginTop="16dp"
        android:onClick="sendMessage"
        android:layout_below="@+id/scores"
        android:layout_alignLeft="@+id/build_big"
        android:layout_alignStart="@+id/build_big" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/build_big"
        android:id="@+id/build_big"
        android:background="#F08C35"
        android:onClick="sendMessage"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/xyz_read"
        android:id="@+id/xyz_read"
        android:background="#F08C35"
        android:onClick="sendMessage"
        android:layout_below="@+id/build_big"
        android:layout_alignLeft="@+id/library"
        android:layout_alignStart="@+id/library"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:onClick="sendMessage"
        android:text="@string/capstone"
        android:background="#ad1457"
        android:layout_below="@+id/xyz_read"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>


</RelativeLayout>
